前のhtmlを移行した

--- a/_data/menus.yml
+++ b/_data/menus.yml
@@ -7,11 +7,8 @@
 - default: menu_about
   url: 'about'
 
-- title: 'Game'
-  url: 'game.html'
-
 - title: 'SNS'
-  url: 'sns.html'
+  url: 'sns'
 
 - title: 'Contact'
   absoluteUrl: true
