--- a/_data/menus.yml
+++ b/_data/menus.yml
@@ -11,5 +11,4 @@
   url: 'sns'
 
 - title: 'Contact'
-  absoluteUrl: true
-  url: 'https://twitter.com/messages/1031932278862053376-1460701725975666690'
+  url: 'contact'
