--- a/_data/lang.yml
+++ b/_data/lang.yml
@@ -88,7 +88,7 @@ ja:
   menu_category: 'Category'
   menu_about: 'About'
   menu_works: 'Works'
-  menu_personal_works: 'Personal Works'
+  menu_personal-works: 'Personal Works'
   menu_music: 'Music'
   paginator_previous: '前のページ'
   paginator_pages: 'ページ数：'
